<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, Andromed!</string>
	<string name="app_name"> Andromed Tropical</string>
	<string name="welcome">Bienvennu dans Andromed !</string>
	<string name="app_description">Nous voulons éradiquer la Malaria !</string>
	<string name="enter">Entrer</string>
	<string name="add_patient">Ajouter un patient</string>
	<string name="patient_list">Liste de patients</string>
	<string name="detail_patient">Détails</string>
	<string name="option_diagnostic">Diagnostique</string>
	<string name="filtrer">Filtrer </string>
	<string name="vide"></string>
	<string name="search_patient">Chercher un patient</string>
	<string name="ok">Ok</string>
	<string name="detail_devise">Patrick Bashizi</string>
	<string name="diplay">Ouvir</string>
	<string name="delete">Supprimer</string>
	<string name="new_cas">CAS</string>
	<string name="case_list">Liste de cas</string>
	<string name="new_quote">Nouveau Fait</string>
	<string name="all_quotes">Faits</string>
	<string name="save">Sauver</string>
	<string name="discard">Annuler</string>
	<string name="quotes">Publications</string>
	<string name="previous">Previous</string>
	<string name="next">Next</string>
	<string name="quote">
		<quote></quote>
		quote_here
	</string>
	<string name="temp">quote</string>
	<string name="home">Tropical Andromed</string>
	<string name="facts">Faits</string>
	<string name="sync">Publier</string>
	<string name="settings">Params</string>
	<string name="author">Auteur:</string>
	<string name="select_id">Choisir un index</string>
	<string name="go_to">Aller Vers</string>
	<string name="add_fact">Ajouter</string>
	<string name="share_fact">Partager</string>
	<string name="current_id">ID</string>
	<string name="device_cloud">Synchroniser les données</string>
	<string name="name">Nom</string>
	<string name="under_treatement">Sous traitement :</string>
	<string name="category">Categorie :</string>
	<string name="age">Age :</string>
	<string name="anonymous">Anomyme</string>
	<string name="illness_days">Depuis:</string>
	<string name="about">A propos</string>

	<string name="about_text" >
	Andromed Tropical est un outil de receuil
	de données sanitaires.C\'est aussi un outil de sensibilisation
		informative contre les maladies tropicales les plus
		meurtières telles que le paludisme.
		\n\nAll rights Reserved by Patrick Bashizi.\n
		Bug Report :bashizip@gmail.com
		\n\nIcon credits:\nwww.androidicons.com,\nwww.glyphish.com
</string>

	<string name="web">Web</string>
	<string name="zone">Zone</string>
	<string name="Zone_sante">Zone de santé</string>
	<string name="desease">Maladie</string>
	<string name="click_to_select">Click to select</string>
	<string name="description">Description </string>
	<string name="investigation">Investigation</string>
	<string-array name="default_quotes">
		<item>Paludism is by far he most important tropical parasitic diseases
			in the world and it makes more victims than any other communicable
			disease, except for tuberculosis.</item>
		<item>Le paludisme tue un enfant chaque seconde dans le monde</item>
	</string-array>
	<string name="anuler">Annuler</string>
	<string name="w2f">W2F</string>
	<string name="stats">Stats</string>
	<string name="infos_volontaire">Infos sur le volontaire</string>
	<string-array name="countries">
		<item>Afghanistan</item>
		<item>Albania</item>
		<item>Algeria</item>
		<item>American Samoa</item>
		<item>Andorra</item>
		<item>Angola</item>
		<item>Anguilla</item>
		<item>Antarctica</item>
		<item>Antigua and Barbuda</item>
		<item>Argentina</item>
		<item>Armenia</item>
		<item>Aruba</item>
		<item>Australia</item>
		<item>Austria</item>
		<item>Azerbaijan</item>
		<item>Bahrain</item>
		<item>Bangladesh</item>
		<item>Barbados</item>
		<item>Belarus</item>
		<item>Belgium</item>
		<item>Belize</item>
		<item>Benin</item>
		<item>Bermuda</item>
		<item>Bhutan</item>
		<item>Bolivia</item>
		<item>Bosnia and Herzegovina</item>
		<item>Botswana</item>
		<item>Bouvet Island</item>
		<item>Brazil</item>
		<item>British Indian Ocean Territory</item>
		<item>British Virgin Islands</item>
		<item>Brunei</item>
		<item>Bulgaria</item>
		<item>Burkina Faso</item>
		<item>Burundi</item>
		<item>Cote d\'Ivoire</item>
		<item>Cambodia</item>
		<item>Cameroon</item>
		<item>Canada</item>
		<item>Cape Verde</item>
		<item>Cayman Islands</item>
		<item>Central African Republic</item>
		<item>Chad</item>
		<item>Chile</item>
		<item>China</item>
		<item>Christmas Island</item>
		<item>Cocos (Keeling) Islands</item>
		<item>Colombia</item>
		<item>Comoros</item>
		<item>Congo</item>
		<item>Congo (Democratic Republic of the) </item>
		<item>Cook Islands</item>
		<item>Costa Rica</item>
		<item>Croatia</item>
		<item>Cuba</item>
		<item>Cyprus</item>
		<item>Czech Republic</item>
		<item>Denmark</item>
		<item>Djibouti</item>
		<item>Dominica</item>
		<item>Dominican Republic</item>
		<item>East Timor</item>
		<item>Ecuador</item>
		<item>Egypt</item>
		<item>El Salvador</item>
		<item>Equatorial Guinea</item>
		<item>Eritrea</item>
		<item>Estonia</item>
		<item>Ethiopia</item>
		<item>Faeroe Islands</item>
		<item>Falkland Islands</item>
		<item>Fiji</item>
		<item>Finland</item>
		<item>Former Yugoslav Republic of Macedonia</item>
		<item>France</item>
		<item>French Guiana</item>
		<item>French Polynesia</item>
		<item>French Southern Territories</item>
		<item>Gabon</item>
		<item>Georgia</item>
		<item>Germany</item>
		<item>Ghana</item>
		<item>Gibraltar</item>
		<item>Greece</item>
		<item>Greenland</item>
		<item>Grenada</item>
		<item>Guadeloupe</item>
		<item>Guam</item>
		<item>Guatemala</item>
		<item>Guinea</item>
		<item>Guinea-Bissau</item>
		<item>Guyana</item>
		<item>Haiti</item>
		<item>Heard Island and McDonald Islands</item>
		<item>Honduras</item>
		<item>Hong Kong</item>
		<item>Hungary</item>
		<item>Iceland</item>
		<item>India</item>
		<item>Indonesia</item>
		<item>Iran</item>
		<item>Iraq</item>
		<item>Ireland</item>
		<item>Israel</item>
		<item>Italy</item>
		<item>Jamaica</item>
		<item>Japan</item>
		<item>Jordan</item>
		<item>Kazakhstan</item>
		<item>Kenya</item>
		<item>Kiribati</item>
		<item>Kuwait</item>
		<item>Kyrgyzstan</item>
		<item>Laos</item>
		<item>Latvia</item>
		<item>Lebanon</item>
		<item>Lesotho</item>
		<item>Liberia</item>
		<item>Libya</item>
		<item>Liechtenstein</item>
		<item>Lithuania</item>
		<item>Luxembourg</item>
		<item>Macau</item>
		<item>Madagascar</item>
		<item>Malawi</item>
		<item>Malaysia</item>
		<item>Maldives</item>
		<item>Mali</item>
		<item>Malta</item>
		<item>Marshall Islands</item>
		<item>Martinique</item>
		<item>Mauritania</item>
		<item>Mauritius</item>
		<item>Mayotte</item>
		<item>Mexico</item>
		<item>Micronesia</item>
		<item>Moldova</item>
		<item>Monaco</item>
		<item>Mongolia</item>
		<item>Montserrat</item>
		<item>Morocco</item>
		<item>Mozambique</item>
		<item>Myanmar</item>
		<item>Namibia</item>
		<item>Nauru</item>
		<item>Nepal</item>
		<item>Netherlands</item>
		<item>Netherlands Antilles</item>
		<item>New Caledonia</item>
		<item>New Zealand</item>
		<item>Nicaragua</item>
		<item>Niger</item>
		<item>Nigeria</item>
		<item>Niue</item>
		<item>Norfolk Island</item>
		<item>North Korea</item>
		<item>Northern Marianas</item>
		<item>Norway</item>
		<item>Oman</item>
		<item>Pakistan</item>
		<item>Palau</item>
		<item>Panama</item>
		<item>Papua New Guinea</item>
		<item>Paraguay</item>
		<item>Peru</item>
		<item>Philippines</item>
		<item>Pitcairn Islands</item>
		<item>Poland</item>
		<item>Portugal</item>
		<item>Puerto Rico</item>
		<item>Qatar</item>
		<item>Reunion</item>
		<item>Romania</item>
		<item>Russia</item>
		<item>Rwanda</item>
		<item>Sqo Tome and Principe</item>
		<item>Saint Helena</item>
		<item>Saint Kitts and Nevis</item>
		<item>Saint Lucia</item>
		<item>Saint Pierre and Miquelon</item>
		<item>Saint Vincent and the Grenadines</item>
		<item>Samoa</item>
		<item>San Marino</item>
		<item>Saudi Arabia</item>
		<item>Senegal</item>
		<item>Seychelles</item>
		<item>Sierra Leone</item>
		<item>Singapore</item>
		<item>Slovakia</item>
		<item>Slovenia</item>
		<item>Solomon Islands</item>
		<item>Somalia</item>
		<item>South Africa</item>
		<item>South Georgia and the South Sandwich Islands</item>
		<item>South Korea</item>
		<item>Spain</item>
		<item>Sri Lanka</item>
		<item>Sudan</item>
		<item>Suriname</item>
		<item>Svalbard and Jan Mayen</item>
		<item>Swaziland</item>
		<item>Sweden</item>
		<item>Switzerland</item>
		<item>Syria</item>
		<item>Taiwan</item>
		<item>Tajikistan</item>
		<item>Tanzania</item>
		<item>Thailand</item>
		<item>The Bahamas</item>
		<item>The Gambia</item>
		<item>Togo</item>
		<item>Tokelau</item>
		<item>Tonga</item>
		<item>Trinidad and Tobago</item>
		<item>Tunisia</item>
		<item>Turkey</item>
		<item>Turkmenistan</item>
		<item>Turks and Caicos Islands</item>
		<item>Tuvalu</item>
		<item>Virgin Islands</item>
		<item>Uganda</item>
		<item>Ukraine</item>
		<item>United Arab Emirates</item>
		<item>United Kingdom</item>
		<item>United States</item>
		<item>United States Minor Outlying Islands</item>
		<item>Uruguay</item>
		<item>Uzbekistan</item>
		<item>Vanuatu</item>
		<item>Vatican City</item>
		<item>Venezuela</item>
		<item>Vietnam</item>
		<item>Wallis and Futuna</item>
		<item>Western Sahara</item>
		<item>Yemen</item>
		<item>Yugoslavia</item>
		<item>Zambia</item>
		<item>Zimbabwe</item>
	</string-array>
	<string name="desc_sommaire">Description de votre zone</string>
	<string name="zone_parameter">Votre zone de santé actuelle</string>
	<string-array name="maladies">
		<item>Dermite sudorale</item>
		<item>Fièvre jaune</item>
		<item>Dengue</item>
		<item>Leishmaniose</item>
		<item>Paludisme</item>
		<item>Papillonite</item>
		<item>Poux d\'Agouti</item>
		<item>Tungose</item>
		<item>Myases</item>
		<item>Larva migrans cutanée</item>
		<item>Maladie de Chagas</item>
		<item>Encéphalite japonaise</item>
		<item>Fièvre typhoïde</item>
		<item>Amibiase</item>
		<item>L\'hépatite A </item>
		<item>Larva currens </item>
		<item>Schistosomiase</item>
		<item>La lèpre </item>
		<item>Chikungunya</item>
		<item>Trypanosomiase africaine (maladie du sommeil)</item>
		<item>Dengue hémorragique</item>
		<item>Ulcère de Buruli  </item>
		<item>Polyomiete</item>
		<item>Choléra</item>

	</string-array>
	<string name="params">Paramètres</string>
	<string name="maladie_pref">Maladie cible</string>
	<string name="mail">E-Mail</string>
	<string name="show_my_num">Envoyer mon numero</string>
	<string name="show_num_summ">Publier mon numéro en ligne</string>
	<string name="anonymat">Infos personelles</string>
	<string name="send_my_mail">Envoyer mon e-mail</string>
	<string name="send_my_mail_summ">Publier mon adresse e-mail</string>
	<string name="unsycn">Besoin de réplication :</string>
	<string name="current">current</string>
	<string name="cas">Cas</string>
	<string name="liste">Liste</string>
	<string name="infos">Infos</string>
	<string name="sync_d">Syncs</string>
</resources>
